# DSA4264_Geospatial_Group6

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  app.py  docker-compose.yml  good_primary_schools.csv  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  test.py
api/: README.md  __init__.py  data.py  dependencies.py  main.py  schemas.py
chatbot/: __init__.py  agent.py  api_client.py
data/: README.md  benchmark_results.csv  feature_importance_top.csv  good_school_sign_trace.csv  metrics.json  ols_coefficients.csv  rdd_results.csv  rdd_summary.json  ridge_pipeline.pkl  school_group_interaction_coefficients.csv  school_group_ttests.csv  scoring_summary.json
docs/: index.md  technical_report.md
feature_engineering/: README.md  __init__.py  main.py
hedonic_model/: README.md  __init__.py  benchmark_hedonic_variants.py  plot_school_premium_distribution.py  run_school_boundary_rdd.py  run_town_premium_models.py  score_school_premium.py  trace_school_premium_sign.py  train_hedonic_model.py
javascripts/: mermaid-init.js
primary_boundaries/: README.md  build_resale_flat_school_buffer_dataset.py  build_resale_flat_school_dataset_onemaps.py  classify_good_schools_top59.py  join_primary_schools_to_ura_landuse.py  plot_hdb_existing_buildings_folium.py  plot_primary_boundaries_interactive.py  plot_shopping_centres_kaggle.py  tag_mrt_stations_with_kaggle_lines.py
primary_school_scrape/: .gitignore  README.md  scrapy.cfg
scripts/: build_school_location_static_map.py
search/: search_index.json
technical_report/: index.html
(+100 files in other folders)
